Fix first portion of compilation errors