@@ -443,7 +443,7 @@ public class RubiconBidderTest extends VertxTest {
         // created manually, because mapper creates Double ObjectNode instead of BigDecimal
         // for floating point numbers (affects testing only)
         final ObjectNode rp = mapper.createObjectNode();
-        rp.set("rp", mapper.createObjectNode().put("pixelratio", new Double("4.2")));
+        rp.set("rp", mapper.createObjectNode().put("pixelratio", Double.valueOf("4.2")));
 
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1).doesNotContainNull()
